--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ProjectBlocksApi",
+  "name": "AngularExpressProjectBaseApi",
   "version": "0.0.1",
   "description": "",
   "main": "app.js",
