updated config files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Phil Pastorek",
-  "name": "project-blocks",
+  "name": "AngularExpressProjectBase",
   "email": "contact@hirethisdeveloper.com",
   "url": "http://www.hirethisdeveloper.com/",
   "version": "1.0.0",
