--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-blocks",
+  "name": "AngularExpressProjectBase",
   "dependencies": {
     "normalize-css": "~3.0.3",
     "angular": "~1.4.5",
