--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,12 @@
     "normalize-css": "~3.0.3",
     "angular": "~1.4.5",
     "angular-ui-router": "~0.2.14",
-    "ngstorage": "~0.3.9"
+    "ngstorage": "~0.3.9",
+    "foundation": "~5.5.3",
+    "jquery": "~2.1.4",
+    "underscore": "~1.8.3",
+    "angular-resource": "~1.4.7",
+    "angular-route": "~1.4.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.5"
